2006-09-06 00:20:31  Sean Middleditch <elanthis@awesomeplay.com>

  * Parse system now only accepts named parameters; they may no
    longer be accessed by index, and every parameter must have
    a name.
  * Updated all script functions/methods that used the parsing
    engine to take alternative string/value pairs in their variable
    argument list.
  * Updated all date and source to replace use of indexed parse
    parameters with named parameters.

2006-09-05 11:45:41  Sean Middleditch <elanthis@awesomeplay.com>

  * Fix name of awemud.conf parameter for setting the HTML template
    directory.
  * Make the awemud start script work properly again.

2006-09-05 03:10:29  Sean Middleditch <elanthis@awesomeplay.com>

  * Split the data/html file into separate .tpl files in data/html/.

2006-09-04 20:39:32  Sean Middleditch <elanthis@awesomeplay.com>

  * Made _ a valid character for a parse name.
  * Improved HTTP error system.
  * HTTP handler no longer stores all headers, but only the values
    of the ones it cares about, to avoid header bomb attacks.
  * Fixed bug in ScriptFunction::run(ScriptValue,ScriptValue)
    where it wasn't storing the second argument correctly.
  * Cleaned up HTTP handler.

2006-09-04 10:13:22  Sean Middleditch <elanthis@awesomeplay.com>

  * The function is called exit(), not portal(); yay for
    search-and-replace.

2006-09-04 09:46:09  Sean Middleditch <elanthis@awesomeplay.com>

  * Fixed telnet timeout not working.
  * Added a Nil type to Scriptix to avoid crashes on errors
    regarding nil values.
  * Added HTTP timeouts.
  * Added request size checking to HTTP requests.
  * Greatly improved HTTP error reporting and logging.
  * Note: HTTP still susceptible to "header bombing."

2006-09-04 07:13:47  Sean Middleditch <elanthis@awesomeplay.com>

  * Add proper HTTP session tracking and session IDs.
  * WARNING: I have no clue how secure the session IDs are.
    Not my area of expertise.
